--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <img src="Logo_BUAP3.png" alt="BUAP Logo" class="logo">
       <img src="Logo_FA.png" alt ="BUAP Logo" class="logo2">  
       <div class="search-box">
-        <form action="https://davidhernandezl.github.io/Fapp/mapa.html">
+        <form action="https://foraneo-app.github.io/Fapp/mapa.html">
           <input type="text" id="search-input" placeholder="Matricula">
           <button type="submit" id="search-button">Entrar</button>
         </form>
