--- a/legal.html
+++ b/legal.html
@@ -47,7 +47,7 @@
   <div class="welcome-container">
     <div class="centered-box">
       <img src="Disclaimer.png" class="img">
-        <form action="https://foraneo-app.github.io/Fapp/mapa.html">
+        <form action="https://foraneo-app.github.io/Foraneo-App/mapa.html">
           <button type="submit" id="search-button">Entendido</button>
         </form>
       </div>
