--- a/mapa.html
+++ b/mapa.html
@@ -21,7 +21,7 @@
       <button id="salud-button" class="navbar-button"><i class="fas fa-medkit"></i> Health </button>
       <button id="compras-button" class="navbar-button"><i class="fas fa-shopping-cart"></i> Shopping </button>
     </div>
-    <form action="https://foraneo-app.github.io/Fapp/legal.html">
+    <form action="https://foraneo-app.github.io/Foraneo-App/legal.html">
       <button id="info-button" class="info-button"><i class="fas fa-info"></i></button>
     </form>
   </div>
